cloudformation-template/raisetech-lecture13-ec2.yml
AWSTemplateFormatVersion: 2010-09-09
Description: EC2-template
Resources:
# EC2の作成 
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: CFnKeyPair
      DisableApiTermination: false          # 削除保護 
      ImageId: ami-0ffac3e16de16665e
      InstanceType: t2.micro
      Monitoring: false
      AvailabilityZone: !Sub ${AWS::Region}a
      SubnetId: !ImportValue raisetech-lecture10-publicSubnet1a-id
      SecurityGroupIds:
        - !Ref EC2Sg
      # EBSボリュームのアタッチ
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeType: gp2
            DeleteOnTermination: true         # EC2インスタンスが削除される時、ボリュームも自動的に削除する。
            VolumeSize: 8
      Tags:
        - Key: Name
          Value: raisetech-lecture10-ec2

# IAMロールはインスタンスプロファイルに結びつけてEC2にアタッチする(memo)

# EC2のセキュリティーグループの作成
  EC2Sg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: connect with ssh and webservice
      VpcId: !ImportValue rasetech-lecture10-vpc-id
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: raisetech-lecture10-sg-ec2

Outputs:
    EC2Outpput:
        Description: EC2 ID
        Value: !Ref EC2Instance
        Export:
            Name: rasetech-lecture10-ec2-id
    EC2SgOutput:
        Description: EC2Sg ID
        Value: !Ref EC2Sg
        Export:
            Name: raisetech-lecture10-sg-ec2-id
